Lisp: Fixing Makefile to allow cltest to work with mvpoli.lisp functions
Signed-off-by: Toma Luca <toma.luca95@gmail.com>

--- a/Lisp/Makefile
+++ b/Lisp/Makefile
@@ -7,12 +7,12 @@ all: repl
 .PHONY: test
 test:
 	@ echo "+++ Run tests and exit +++"
-	$(lisp) --script $(FILENAME)_test.lisp
+	$(lisp) --load ${FILENAME}.lisp --script $(FILENAME)_test.lisp
 
 .PHONY: test_interactive
 test_interactive:
 	$(lisp) --load $(FILENAME)_test.lisp --eval "(format t \"~%~%To get more details run (run-tests)\")"
 
 .PHONY: repl
-repl: 
+repl:
 	$(lisp) --load $(FILENAME).lisp
