--- a/Lisp/Makefile
+++ b/Lisp/Makefile
@@ -7,12 +7,12 @@ all: repl
 .PHONY: test
 test:
 	@ echo "+++ Run tests and exit +++"
-	$(lisp) --load ${FILENAME}.lisp --script $(FILENAME)_test.lisp
+	$(lisp) --noinform --load ${FILENAME}.lisp --script $(FILENAME)_test.lisp
 
 .PHONY: test_interactive
 test_interactive:
-	$(lisp) --load $(FILENAME)_test.lisp --eval "(format t \"~%~%To get more details run (run-tests)\")"
+	$(lisp) --noinform --load $(FILENAME)_test.lisp --eval "(format t \"~%~%To get more details run (run-tests)\")"
 
 .PHONY: repl
 repl:
-	$(lisp) --load $(FILENAME).lisp
+	$(lisp) --noinform --load $(FILENAME).lisp
